if(STB_BUILD_STB_CONNECTED_COMPONENTS)
    add_subdirectory(stb_connected_components)
endif()

if(STB_BUILD_STB_C_LEXER)
    add_subdirectory(stb_c_lexer)
endif()

if(STB_BUILD_STB_DIVIDE)
    add_subdirectory(stb_divide)
endif()

if(STB_BUILD_STB_DS)
    add_subdirectory(stb_ds)
endif()

if(STB_BUILD_STB_DXT)
    add_subdirectory(stb_dxt)
endif()

if(STB_BUILD_STB_EASY_FONT)
    add_subdirectory(stb_easy_font)
endif()

if(STB_BUILD_STB_HERRINGBONE_WANG_TILE)
    add_subdirectory(stb_herringbone_wang_tile)
endif()

if(STB_BUILD_STB_HEXWAVE)
    add_subdirectory(stb_hexwave)
endif()

if(STB_BUILD_STB_IMAGE)
    add_subdirectory(stb_image)
endif()

if(STB_BUILD_STB_IMAGE_RESIZE)
    add_subdirectory(stb_image_resize)
endif()

if(STB_BUILD_STB_IMAGE_WRITE)
    add_subdirectory(stb_image_write)
endif()

if(STB_BUILD_STB_INCLUDE)
    add_subdirectory(stb_include)
endif()

if(STB_BUILD_STB_LEAKCHECK)
    add_subdirectory(stb_leakcheck)
endif()

if(STB_BUILD_STB_PERLIN)
    add_subdirectory(stb_perlin)
endif()

if(STB_BUILD_STB_RECT_PACK)
    add_subdirectory(stb_rect_pack)
endif()

if(STB_BUILD_STB_SPRINTF)
    add_subdirectory(stb_sprintf)
endif()

if(STB_BUILD_STB_TEXTEDIT)
    add_subdirectory(stb_textedit)
endif()

if(STB_BUILD_STB_TILEMAP_EDITOR)
    add_subdirectory(stb_tilemap_editor)
endif()

if(STB_BUILD_STB_TRUETYPE)
    add_subdirectory(stb_truetype)
endif()

if(STB_BUILD_STB_VORBIS)
    add_subdirectory(stb_vorbis)
endif()

if(STB_BUILD_STB_VOXEL_RENDER)
    add_subdirectory(stb_voxel_render)
endif()

if(STB_BUILD_DEPRECATED)
	add_subdirectory(deprecated)
endif()