if(STB_BUILD_UTIL_STB_BUILD_MATRIX)
    add_subdirectory(stb_build_matrix)
endif()

if(STB_BUILD_UTIL_STB_EASY_FONT_MAKER)
    add_subdirectory(stb_easy_font_maker)
endif()

if(STB_BUILD_UTIL_STB_MAKE_README)
    add_subdirectory(stb_make_readme)
endif()

if(STB_BUILD_UTIL_STB_TRAILING_WHITESPACE)
    add_subdirectory(stb_trailing_whitespace)
endif()

if(STB_BUILD_UTIL_STB_UNICODE)
    add_subdirectory(stb_unicode)
endif()